--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>Hi, I'm Cristan. I created this site using data from Mapbox.com and Open-Meteo.com, Enjoy!  </p>
         <img class="portrait" src="/img/portret.jpg">
     </div>
     
