changed welcome text

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p id="error-tag">Use my site to get your weather!</p>
+        <p id="error-tag">Use my site to check the temperature !</p>
         <form>
             <input placeholder="Location" >
             <button>Search</button>
